--- a/scss/blocks/_headline.scss
+++ b/scss/blocks/_headline.scss
@@ -1,6 +1,10 @@
 .headline {
     text-align: center;
     margin-bottom: rem(57px);
+
+    @include phones {
+        margin-bottom: rem(33px);
+    }
 }
 
 .headline__title {
@@ -16,5 +20,10 @@
     line-height: 1.3;
     @include tablets {
         max-width: 573px;
+    }
+
+    @include phones {
+        font-size: 16px;
+        max-width: 409px;
     }
 }
