--- a/scss/blocks/_reviews.scss
+++ b/scss/blocks/_reviews.scss
@@ -26,6 +26,10 @@
         margin-bottom: rem(27px);
     }
 
+    @include phones {
+        padding: 60px 39px;
+    }
+
     &:before {
         content: "";
         width: 90px;
@@ -57,6 +61,12 @@
         height: 133px;
         margin-bottom: rem(26px);
     }
+
+    @include phones {
+        width: 122px;
+        height: 125px;
+        margin-bottom: rem(8px);
+    }
 }
 
 .reviews__avatar-img {
@@ -68,6 +78,11 @@
 .reviews__content {
     flex: 1;
     margin-left: rem(20px);
+
+    @include tablets {
+        margin-left: 0;
+
+    }
 }
 
 .reviews__title {
@@ -90,6 +105,10 @@
         font-size: rem(18px);
         line-height: 1.3;
     }
+    @include phones {
+        line-height: 1.15;
+        margin-bottom: rem(19px);
+    }
 }
 
 .reviews__author {
@@ -104,4 +123,10 @@
 .reviews__switcher {
     display: flex;
     justify-content: center;
+
+    @include phones {
+        justify-content: space-between;
+        margin: 0 auto;
+        max-width: 209px;
+    }
 }
