--- a/css/main.css
+++ b/css/main.css
@@ -217,7 +217,7 @@ img {
   margin-right: 0.25rem;
 }
 
-.logo {
+.logo__item {
   width: 42px;
   height: 42px;
 }
@@ -800,6 +800,11 @@ img {
     padding: 0 19%;
   }
 }
+@media screen and (max-width: 480px) {
+  .form {
+    padding: 0;
+  }
+}
 
 .form__title {
   font-size: 1.125rem;
@@ -863,15 +868,31 @@ img {
   display: flex;
   flex-wrap: wrap;
 }
+@media screen and (max-width: 768px) {
+  .form__controls {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form__controls {
+    justify-content: space-evenly;
+    margin-bottom: 0.625rem;
+  }
+}
 
 .form__buttons {
   margin-top: 1.9375rem;
 }
 @media screen and (max-width: 768px) {
   .form__buttons {
-    margin-top: 0;
+    margin-top: 2.4375rem;
     display: flex;
     justify-content: center;
+  }
+}
+@media screen and (max-width: 480px) {
+  .form__buttons {
+    margin-top: 2.6875rem;
   }
 }
 
@@ -884,6 +905,17 @@ img {
 .radio:first-child {
   margin-right: 2.1875rem;
   margin-bottom: 0.75rem;
+}
+@media screen and (max-width: 768px) {
+  .radio:first-child {
+    margin-bottom: 0;
+  }
+}
+@media screen and (max-width: 480px) {
+  .radio:first-child {
+    margin-right: 0;
+    margin-bottom: 0;
+  }
 }
 .radio--checkbox .radio__visible {
   border-radius: 0;
