--- a/css/main.css
+++ b/css/main.css
@@ -770,11 +770,11 @@ img {
 }
 
 .order-section {
-  background: url(../../img/content/order_background.jpg) center center/cover no-repeat;
+  background: url(../../../beats/img/content/order_background.jpg) center center/cover no-repeat;
   position: relative;
 }
 .order-section:after {
-  content: url(../../img/content/polygon.png);
+  content: url(../../../beats/img/content/polygon.png);
   position: absolute;
   top: -1.8125rem;
   right: 10%;
