--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,6 +45,8 @@ $z-index-menu: 100;
 @import "blocks/order-section";
 @import "blocks/form";
 @import "blocks/radio";
+@import "blocks/map";
+@import "blocks/socials";
 @import "blocks/fixed-menu";
 @import "blocks/contact";
 @import "blocks/footer";
