--- a/css/main.css
+++ b/css/main.css
@@ -741,13 +741,7 @@ img {
 .interactive-avatar {
   width: 80px;
   height: 80px;
-  border: 6px solid transparent;
-  border-radius: 50%;
-  overflow: hidden;
   position: relative;
-}
-.interactive-avatar--active {
-  border-color: #e01f3d;
 }
 @media screen and (max-width: 480px) {
   .interactive-avatar {
@@ -760,6 +754,18 @@ img {
   display: block;
   width: 100%;
   height: 100%;
+  border: 6px solid transparent;
+  border-radius: 50%;
+  overflow: hidden;
+}
+.interactive-avatar__link:focus, .interactive-avatar__link:hover {
+  border-color: #e01f3d;
+  outline: navajowhite;
+}
+
+.interactive-avatar--active .interactive-avatar__link {
+  border-color: #e01f3d;
+  outline: navajowhite;
 }
 
 .interactive-avatar__img {
@@ -935,7 +941,7 @@ img {
   display: block;
 }
 .radio__item:focus ~ .radio__visible {
-  box-shadow: 0 0 3px white;
+  box-shadow: 0 0 5px #e01f3d;
 }
 
 .radio__visible {
