--- a/scss/blocks/_radio.scss
+++ b/scss/blocks/_radio.scss
@@ -34,7 +34,7 @@
     clip: rect(0 0 0 0);
     width: 1px;
     height: 1px;
-    margin: -1px;
+    margin: rem(-1px);
 
     &:checked ~ .radio__visible {
         &:before {
