--- a/scss/base.scss
+++ b/scss/base.scss
@@ -11,6 +11,17 @@ html {
     @include tablets {
         font-size: 16px;
     }
+
+    @include phones {
+        font-size: 15px;
+    }
+
+    @include smallPhones {
+        font-size: 14px;
+    }
+    @include verySmallPhones {
+        font-size: 13px;
+    }
 }
 
 html, body {
@@ -42,6 +53,7 @@ html, body {
         width: 96%;
         max-width: $phones;
     }
+    
 }
 
 h1, h2, h3, h4, h5, h6 {
