--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -1,8 +1,18 @@
 .contact {
     font-style: normal;
     color: #000000;
+
+    @include phones {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .contact__location {
-    font-size: 18px;
+    font-size: rem(18px);
+
+    @include phones {
+        font-size: rem(20px);
+    }
 }
