--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -2,10 +2,7 @@
     position: relative;
     background-color: $light-grey;
     padding: 2% 0 3% 0;
-    height: 100vh;
-    min-height: 650px;
     color: $black;
-    width: 100%;
 
     &:before {
         content: "";
@@ -27,7 +24,7 @@
     z-index: 2;
 
     @include tablets {
-        flex: 1;
+        width: 100%;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -39,8 +36,10 @@
     position: relative;
 
     @include tablets {
-        flex-wrap: wrap-reverse;
+        flex-direction: column-reverse;
+        align-items: center;
         justify-content: center;
+        flex: 1;
     }
 }
 
@@ -52,11 +51,6 @@
 
     @include tablets {
         justify-content: center;
-    }
-
-    @include phones {
-        justify-content: flex-start;
-        padding-top: 14%;
     }
 }
 
@@ -106,7 +100,6 @@
     @include tablets {
         position: static;
         width: 51%;
-        margin-bottom: 22px;
         transform: none;
     }
 
