--- a/css/main.css
+++ b/css/main.css
@@ -625,6 +625,11 @@ img {
     padding: 3.75rem 2.4375rem;
   }
 }
+@media screen and (max-width: 375px) {
+  .reviews__display {
+    padding: 3.3125rem 1.25rem 1.5625rem 1.25rem;
+  }
+}
 .reviews__display:before {
   content: "";
   width: 90px;
