--- a/css/main.css
+++ b/css/main.css
@@ -1054,6 +1054,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 1.25rem;
   }
 }
 
@@ -1063,6 +1064,7 @@ img {
 @media screen and (max-width: 480px) {
   .contact__location {
     font-size: 1.25rem;
+    margin-bottom: 1.25rem;
   }
 }
 
