--- a/scss/blocks/_fixed-menu.scss
+++ b/scss/blocks/_fixed-menu.scss
@@ -3,6 +3,10 @@
     top: 39%;
     right: 3%;
     z-index: $z-index-menu;
+
+    @include tablets {
+        display: none;
+    }
 }
 
 .fixed-menu__item {
