--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,6 +44,10 @@ $z-index-menu: 100;
 @import "blocks/reviews";
 @import "blocks/interactive-avatar";
 @import "blocks/order-section";
+@import "blocks/product-section";
+@import "blocks/arrow";
+@import "blocks/param";
+@import "blocks/specs";
 @import "blocks/form";
 @import "blocks/radio";
 @import "blocks/map";
