--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,48 @@ img {
   margin-right: 0;
 }
 
+.menu__mobile {
+  position: fixed;
+  background-color: #2f3234;
+  opacity: 0.99;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0;
+  display: none;
+}
+.menu__mobile .close {
+  position: fixed;
+  right: 26px;
+  top: 32px;
+}
+.menu__mobile .close__item {
+  width: 20px;
+  height: 20px;
+}
+.menu__mobile .menu__list {
+  display: flex;
+  margin-top: 20%;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  flex-direction: column;
+  color: black;
+  font-size: 2.25rem;
+  height: 50%;
+}
+.menu__mobile .menu__item {
+  margin-right: 0;
+}
+.menu__mobile .menu__item a {
+  color: #fff;
+}
+
 .phone {
   font-size: 1.3125rem;
   display: flex;
