--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -13,9 +13,58 @@
     }
 }
 
+
 .menu__item {
     margin-right: rem(28px);
     &:last-of-type {
         margin-right: 0;
     }
 }
+
+.menu__mobile {
+    position: fixed;
+    background-color: #2f3234;
+    opacity: 0.99;
+    width: 100%;
+    height: 100%;
+    z-index: $z-index-menu;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    display: none;
+
+    .close {
+        position: fixed;
+        right: 26px;
+        top: 32px;
+    }
+    
+    .close__item {
+        width: 20px;
+        height: 20px;
+    }
+
+    .menu__list {
+        display: flex;
+        margin-top: 20%;
+        position: fixed;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        flex-direction: column;
+        color: black;
+        font-size: rem(36px);
+        height: 50%;
+    }
+
+    .menu__item {
+        margin-right: 0;
+    }
+
+    .menu__item a {
+        color: #fff;
+    }
+}
+
