--- a/css/main.css
+++ b/css/main.css
@@ -191,8 +191,7 @@ img {
 
 .menu__mobile {
   position: fixed;
-  background-color: #2f3234;
-  opacity: 0.99;
+  background: rgba(47, 50, 52, 0.99);
   width: 100%;
   height: 100%;
   z-index: 100;
