--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -23,8 +23,7 @@
 
 .menu__mobile {
     position: fixed;
-    background-color: #2f3234;
-    opacity: 0.99;
+    background: rgba(47, 50, 52, 0.99);
     width: 100%;
     height: 100%;
     z-index: $z-index-menu;
@@ -67,4 +66,3 @@
         color: #fff;
     }
 }
-
