--- a/css/main.css
+++ b/css/main.css
@@ -189,20 +189,21 @@ img {
   margin-right: 0;
 }
 
+@keyframes modalAnimate {}
 .menu__mobile {
   position: fixed;
+  opacity: 0;
+  transition: opacity 0.4s;
   background: rgba(47, 50, 52, 0.99);
   width: 100%;
   height: 100%;
   z-index: 100;
   left: 0;
-  right: 0;
   bottom: 0;
   top: 0;
-  display: none;
 }
 .menu__mobile .close {
-  position: fixed;
+  position: absolute;
   right: 26px;
   top: 32px;
 }
@@ -213,7 +214,7 @@ img {
 .menu__mobile .menu__list {
   display: flex;
   margin-top: 20%;
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
@@ -228,6 +229,16 @@ img {
 }
 .menu__mobile .menu__item a {
   color: #fff;
+}
+
+.open {
+  opacity: 1;
+  transition: opacity 0.4s;
+  right: 0;
+}
+
+.hidden {
+  left: -9999px;
 }
 
 .phone {
