--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,6 +45,7 @@ $z-index-menu: 100;
 @import "blocks/interactive-avatar";
 @import "blocks/order-section";
 @import "blocks/product-section";
+@import "blocks/team-section";
 @import "blocks/arrow";
 @import "blocks/param";
 @import "blocks/specs";
