--- a/scss/main.scss
+++ b/scss/main.scss
@@ -49,6 +49,8 @@ $z-index-menu: 100;
 @import "blocks/arrow";
 @import "blocks/param";
 @import "blocks/specs";
+@import "blocks/dropdown";
+@import "blocks/slider";
 @import "blocks/form";
 @import "blocks/radio";
 @import "blocks/map";
