--- a/scss/blocks/_product-section.scss
+++ b/scss/blocks/_product-section.scss
@@ -25,16 +25,21 @@
 
 .product__list {
     display: flex;
-    justify-content: center;
-    align-items: center;
     position: relative;
     right: 0;
     transition: right .8s;
+    min-width: 0;
 }
 
 .product__item {
-    width: 962px;
     display: flex;
+    flex: 0 0 100%;
+    justify-content: center;
+
+    @include tablets {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .product__content {
