--- a/scss/blocks/_reviews.scss
+++ b/scss/blocks/_reviews.scss
@@ -49,6 +49,10 @@
     }
 }
 
+.reviews__item {
+    display: none;
+}
+
 .reviews__display-item {
     display: flex;
     @include tablets {
@@ -134,4 +138,45 @@
         margin: 0 auto;
         max-width: 209px;
     }
+}
+
+.reviews__switcher-item {
+    width: 80px;
+    height: 80px;
+    position: relative;
+
+    @include phones {
+        width: 54px;
+        height: 54px;
+    }
+}
+
+.reviews__switcher-link {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border: 6px solid transparent;
+    border-radius: 50%;
+    overflow: hidden;
+
+    &:focus, &:hover {
+        border-color: #e01f3d;
+        outline: navajowhite;
+    }
+}
+
+.reviews__switcher-img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.active .reviews__switcher-link {
+    border-color: #e01f3d;
+    outline: navajowhite;
+}
+
+.active {
+    display: block;
 }
