--- a/scss/blocks/_reviews.scss
+++ b/scss/blocks/_reviews.scss
@@ -49,8 +49,20 @@
     }
 }
 
+.reviews__list {
+    position: relative;
+    min-height: 280px;
+}
+
 .reviews__item {
-    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    transition: .4s;
+    pointer-events: none;
 }
 
 .reviews__display-item {
@@ -178,5 +190,7 @@
 }
 
 .active {
-    display: block;
+    position: static;
+    opacity: 1;
+    pointer-events: unset;
 }
