--- a/css/main.css
+++ b/css/main.css
@@ -975,6 +975,7 @@ img {
   text-align: left;
   line-height: 1.3;
   margin-bottom: 0.5625rem;
+  width: 101%;
 }
 @media screen and (max-width: 768px) {
   .product__title {
