--- a/scss/blocks/_product-section.scss
+++ b/scss/blocks/_product-section.scss
@@ -78,6 +78,7 @@
     text-align: left;
     line-height: 1.3;
     margin-bottom: rem(9px);
+    width: 101%;
 
     @include tablets {
         font-size: rem(30px);
