--- a/scss/blocks/_team-section.scss
+++ b/scss/blocks/_team-section.scss
@@ -4,6 +4,11 @@
 
 .team__list {
     display: flex;
+
+    @include tablets {
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 .team__item {
@@ -12,6 +17,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    @include tablets {
+        width: auto;
+        min-height: 0;
+        margin-bottom: 24px;
+        &:last-of-type {
+            margin-bottom: 0;
+        }
+    }
 }
 
 .team__link {
@@ -39,7 +53,15 @@
     height: 0;
     text-align: center;
     overflow: hidden;
-    transition: height .2s;
+    transition: height .4s;
+
+    @include tablets {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        max-width: 260px;
+    }
 }
 
 .team__open {
