--- a/css/main.css
+++ b/css/main.css
@@ -1022,6 +1022,13 @@ img {
   margin-right: 1.5625rem;
 }
 
+@media screen and (max-width: 768px) {
+  .team-section {
+    justify-content: flex-start;
+    padding-top: 40px;
+  }
+}
+
 .team__container {
   max-width: 960px;
 }
@@ -1076,10 +1083,10 @@ img {
 }
 
 .team__desc {
-  height: 0;
+  max-height: 0;
   text-align: center;
   overflow: hidden;
-  transition: height 0.4s;
+  transition: max-height 0.6s;
 }
 @media screen and (max-width: 768px) {
   .team__desc {
@@ -1092,7 +1099,7 @@ img {
 }
 
 .team__open {
-  height: 100%;
+  max-height: 100vh;
 }
 
 .team__app {
