--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,7 @@ $z-index-menu: 100;
 @import "blocks/dropdown";
 @import "blocks/slider";
 @import "blocks/form";
+@import "blocks/color-section";
 @import "blocks/radio";
 @import "blocks/map";
 @import "blocks/socials";
