--- a/css/main.css
+++ b/css/main.css
@@ -1025,7 +1025,7 @@ img {
 @media screen and (max-width: 768px) {
   .team-section {
     justify-content: flex-start;
-    padding-top: 40px;
+    padding-top: 2.5rem;
   }
 }
 
@@ -1054,7 +1054,7 @@ img {
   .team__item {
     width: auto;
     min-height: 0;
-    margin-bottom: 24px;
+    margin-bottom: 1.5rem;
   }
   .team__item:last-of-type {
     margin-bottom: 0;
@@ -1365,6 +1365,95 @@ img {
   .form__buttons {
     margin-top: 2.6875rem;
   }
+}
+
+.color-section {
+  background: url(../../img/content/hp-hero-powerbeats.jpg.large.1x.jpg.png) center center/cover no-repeat;
+  background-size: cover;
+  position: relative;
+}
+
+.color__container {
+  display: flex;
+  max-width: inherit;
+  width: 100%;
+  justify-content: space-between;
+  align-items: flex-start;
+  height: 100%;
+}
+
+.color-section__title {
+  color: #ffffff;
+  margin: 4% 0 0 4%;
+}
+
+.color__list {
+  display: flex;
+  height: 100%;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.color__item {
+  display: flex;
+}
+
+.color__link {
+  width: 100px;
+  position: relative;
+  background-color: #999999;
+}
+.color__link--black {
+  background-color: #151515;
+}
+.color__link--red {
+  background-color: #e01f3d;
+}
+
+.color__link-item {
+  font-size: 2.25rem;
+  position: absolute;
+  width: -webkit-max-content;
+  width: max-content;
+  color: #fff;
+  font-weight: 700;
+  transform: rotateZ(-90deg) translate(50%);
+  bottom: 0px;
+  right: -7.8125rem;
+}
+
+.color__close {
+  position: absolute;
+  right: 2rem;
+  top: 1.625rem;
+}
+
+.color__close-item {
+  width: 18px;
+  height: 18px;
+  opacity: 0.7;
+}
+
+.color__desc {
+  max-width: 0px;
+  background: rgba(51, 53, 55, 0.93);
+  position: relative;
+  overflow: hidden;
+  transition: max-width 0.7s;
+}
+
+.color__desc-container {
+  padding: 2.4375rem 7.5rem 23.875rem 1.6875rem;
+}
+
+.color__text {
+  color: #fff;
+}
+
+.color__open {
+  max-width: 630px;
 }
 
 .radio {
